# misis2024s-23-04-michkov-e-v

./: .gitignore  CMakeLists.txt  README.md  add_cli.sh  build.sh  codeforces.id  precommit.py  run.sh  status.md
.github/workflows/: cmake-multi-platform.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/services/: add_service.rs  build_service.rs
cli/src/validators/: file_validator.rs  module_validator.rs
prj.app/roborun/: roborun.cpp
prj.codeforces/: 0001a.cpp  0001b.cpp  0004a.cpp  0004c.cpp  0041a.cpp  0043a.cpp  0050a.cpp  0058a.cpp  0059a.cpp  0069a.cpp  0071a.cpp  0086d.cpp  0096a.cpp  0110a.cpp  0112a.cpp  0116a.cpp  0118a.cpp  0122a.cpp  0131a.cpp  0136b.cpp  0158a.cpp  0230a.cpp  0230b.cpp  0231a.cpp  0236a.cpp  0263a.cpp  0266a.cpp  0271a.cpp  0276a.cpp  0276c.cpp  0279b.cpp  0281a.cpp  0282a.cpp  0339a.cpp  0339b.cpp  0380c.cpp  0431c.cpp  0455a.cpp  0456a.cpp  0466a.cpp  (+34 more)
prj.lab/: CMakeLists.txt
prj.lab/bitset/: bitset.cpp  bitset.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.lab/stackarrt/: CMakeLists.txt  stackarrt.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.test/: CMakeLists.txt  test_bitset.cpp  test_complex.cpp  test_dynarr.cpp  test_queuearr.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_rational.cpp  test_stackarr.cpp  test_stackarrt.cpp  test_stacklst.cpp
scripts/: add_aliases.sh  build.sh  new_module.py  q_cli.sh
sripts/: run.sh
utils/: precommit.py  requirements.txt
utils/parse_codeforces/: models.py  parse_codeforces.py
