add_executable(0001a 0001a.cpp)
add_executable(0001b 0001b.cpp)
add_executable(0004a 0004a.cpp)
add_executable(0004c 0004c.cpp)
add_executable(0041a 0041a.cpp)
add_executable(0043a 0043a.cpp)
add_executable(0050a 0050a.cpp)
add_executable(0058a 0058a.cpp)
add_executable(0059a 0059a.cpp)
add_executable(0069a 0069a.cpp)
add_executable(0071a 0071a.cpp)
add_executable(0112a 0112a.cpp)
add_executable(0118a 0118a.cpp)
add_executable(0122a 0122a.cpp)
add_executable(0131a 0131a.cpp)
add_executable(0136b 0136b.cpp)
add_executable(0158a 0158a.cpp)
add_executable(0230a 0230a.cpp)
add_executable(0231a 0231a.cpp)
add_executable(0236a 0236a.cpp)
add_executable(0263a 0263a.cpp)
add_executable(0266a 0266a.cpp)
add_executable(0271a 0271a.cpp)
add_executable(0276a 0276a.cpp)
add_executable(0276c 0276c.cpp)
add_executable(0281a 0281a.cpp)
add_executable(0282a 0282a.cpp)
add_executable(0339a 0339a.cpp)
add_executable(0339b 0339b.cpp)
add_executable(0431c 0431c.cpp)
add_executable(0466a 0466a.cpp)
add_executable(0479a 0479a.cpp)
add_executable(0489b 0489b.cpp)
add_executable(0492b 0492b.cpp)
add_executable(0499b 0499b.cpp)
add_executable(0519b 0519b.cpp)
add_executable(0520a 0520a.cpp)
add_executable(0617a 0617a.cpp)
add_executable(0734a 0734a.cpp)
add_executable(0791a 0791a.cpp)
add_executable(0978a 0978a.cpp)
add_executable(0978b 0978b.cpp)
add_executable(1330a 1330a.cpp)
add_executable(1352a 1352a.cpp)
add_executable(1352c 1352c.cpp)
add_executable(1371d 1371d.cpp)
add_executable(1404a 1404a.cpp)
add_executable(1473b 1473b.cpp)
add_executable(1559a 1559a.cpp)
add_executable(1585a 1585a.cpp)
add_executable(1669d 1669d.cpp)
add_executable(1670b 1670b.cpp)
add_executable(1690d 1690d.cpp)
add_executable(1717b 1717b.cpp)
add_executable(1721b 1721b.cpp)
add_executable(1734b 1734b.cpp)
add_executable(1760с 1760с.cpp)
add_executable(1872a 1872a.cpp)
add_executable(1873c 1873c.cpp)
add_executable(1873d 1873d.cpp)